[workspace]
members = ["bundle/util", "bundle/error", "bundle/models", "bundle/costs"]
exclude = []

[package]
name = "basis"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
edition = "2018"
keywords = ["distributed", "economic", "automation", "communism", "socialism"]
license = "AGPL-3.0"

[dependencies]
chrono = "0.4.6"
config = "0.9.2"
costs = { path = "bundle/costs/" }
error = { path = "bundle/error/" }
exonum = "0.12.1"
exonum-configuration = "0.12.0"
exonum-derive = "0.12.0"
exonum-merkledb = "0.12.0"
failure = "0.1.5"
fern = "0.5.7"
hex = "0.3.2"
lazy_static = "1.2.0"
log = "0.4.6"
models = { path = "bundle/models/" }
protobuf = "2.2.0"
regex = "1.3.1"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.38"
time = "0.1.42"
util = { path = "bundle/util/" }
validator = "0.10.0"
validator_derive = "0.10.0"

[patch.crates-io]
#rocksdb = { path = "../crate-container/rust-rocksdb" }
#exonum-merkledb = { path = "../crate-container/exonum/components/merkledb" }

[dev-dependencies]
assert_matches = "1.2.0"
exonum-testkit = "0.12.0"
hex = "0.3.2"
pretty_assertions = "0.5.1"
uuid = { version = "0.7.2", features = ["v4"] }

[features]
default = ["with-serde"]
with-serde = []

