[package]
name = "models"
version = "0.1.0"
authors = ["Andrew Danger Lyon <orthecreedence@gmail.com>"]
edition = "2018"

[lib]
doctest = false				# these annoy me

[dependencies]
chrono = "0.4.6"
exonum = "0.12.0"
exonum-derive = "0.12.0"
exonum-merkledb = "0.12.0"
error = { path = "../error" }
failure = "0.1.5"
protobuf = "2.2.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.38"
util = { path = "../util" }

[build-dependencies]
exonum-build = "0.11.0"

[features]
default = ["with-serde"]
with-serde = []

